home page updated

--- a/index.html
+++ b/index.html
@@ -756,10 +756,10 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-black/20 backdrop-blur-lg border-t border-white/10 py-12">
+    <footer class="bg-black/20 backdrop-blur-lg border-t border-white/10 py-8">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="flex items-center space-x-2 mb-4 md:mb-0">
+            <div class="flex flex-col md:flex-row justify-between items-center text-gray-300 gap-4">
+                <div class="flex items-center space-x-2">
                     <div class="w-8 h-8 bg-gradient-to-r from-blue-500 to-purple-500 rounded-lg flex items-center justify-center">
                         <i class="fas fa-brain text-white text-sm"></i>
                     </div>
@@ -767,25 +767,13 @@
                         NeuroNet.dev
                     </span>
                 </div>
-                
-                <div class="flex space-x-6 text-gray-400">
-                    <a href="tel:01908040777" class="hover:text-white transition-colors" title="Call us">
-                        <i class="fas fa-phone text-xl"></i>
-                    </a>
-                    <a href="mailto:hello@neuronet.dev" class="hover:text-white transition-colors" title="Email us">
-                        <i class="fas fa-envelope text-xl"></i>
-                    </a>
-                </div>
-            </div>
-            
-            <div class="mt-8 pt-8 border-t border-white/10 text-center text-gray-400">
-                <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
-                    <p>&copy; 2024 NeuroNet.dev. Advancing AI Solutions for Tomorrow's Businesses.</p>
-                    <div class="flex flex-col md:flex-row md:items-center space-y-2 md:space-y-0 md:space-x-6 text-sm">
-                        <a href="tel:01908040777" class="hover:text-white transition-colors">📞 01908 040777</a>
-                        <a href="mailto:hello@neuronet.dev" class="hover:text-white transition-colors">✉️ hello@neuronet.dev</a>
-                        <span>📍 Milton Keynes, UK</span>
-                    </div>
+
+                <p class="text-center">&copy; 2024 NeuroNet.dev. Advancing AI Solutions for Tomorrow's Businesses.</p>
+
+                <div class="flex items-center space-x-6 text-sm">
+                    <a href="tel:01908040777" class="hover:text-white transition-colors">01908 040777</a>
+                    <a href="mailto:hello@neuronet.dev" class="hover:text-white transition-colors">hello@neuronet.dev</a>
+                    <span>Milton Keynes, UK</span>
                 </div>
             </div>
         </div>
